--- a/1.md
+++ b/1.md
@@ -39,6 +39,10 @@ Srećom, danas je lako stupiti u kontakt sa drugim ljudima koji dijele vaše int
 
 > Pridružite nam se na sljedećem [Kodiraonica Meetup-u](https://www.meetup.com/kodiraonica/) gdje ćete moći upoznati naše predavače kao i ostale sudionike zainteresirane za web development.
 
-## 
+## Izgradite portfolio koji vas ističe
+
+Što danas svatko radi kad želi saznati informacije o nekom brendu? Naravno, ode na Google i dođe do službene web stranice. Zamislite sebe kao taj brand, a vaš portfolio kao službenu web stranicu. Bitno je napraviti ju na način koji će najbolje odgovarati na pitanja osobe koja se raspituje o vama. Navedite tehnologije koje poznajete, te projekte koje ste u njima radili. Raspišite se o tome zašto ste baš vi osoba koju netko želi imati u svom timu. Pokažite svoju strast i interes prema web developmentu kroz osobni blog. Mnogo sastojaka ide u savršenu portfolio web stranicu, a na vama je da ih sve zapakirate najljepše što možete.
+
+> Na [našem front-end tečaju](https://blog.kodiraonica.dev/projects/portfolio/) jedan od projekata je izrada portfolio web stranice. Evo [jedan primjer](https://pumped-zoo.surge.sh/) kako takva stranica može izgledati.
 
 ## 
