--- a/1.md
+++ b/1.md
@@ -15,7 +15,13 @@ Aktivnost na Githubu dokazuje poslodavcu da posjedujete nekoliko poželjnih isku
 - Kolaboracija sa drugim developerima
 - Doprinošenje vlastitog koda open-source projektima
 
-Zbog toga je bitno detaljno proći kroz vaš profil te sve pojedinačne projekte, te ih pokazati u najboljem svijetlu. Za svaki projekt možete napraviti detaljan opis sa screenshotovima gotovog projekta u kojem navodite kako i zašto ste ga izradili.
+![Graf Github commitova jenodg developera kroz godinu](https://i.imgur.com/onnceEh.png)
+
+> Github bilježi broj dnevnih commitova koje ste napravili i može ih prikazati u grafu kao sa slike iznad. Ovo je jednostavan način da pokažete svoju kontinuiranu aktivnost kroz duži vremenski period.
+
+Zbog toga je bitno detaljno proći kroz vaš profil te sve pojedinačne projekte, te ih pokazati u najboljem svijetlu. Sa opisom Github profila možete biti stvarno kreativni. Ljudi tu često spominju tehnologije s kojima rade ili ih interesiraju, nešto osobnih i kontakt podataka, statistiku itd. Evo primjer jednog [Github profila](https://github.com/tonkec) iza kojeg stoji očigledan trud da se istakne.
+
+Za svaki projekt možete napraviti detaljan opis sa screenshotovima gotovog projekta u kojem navodite kako i zašto ste ga izradili. [Ovaj projekt](https://github.com/isamardzija/eDisi) u kratkom opisu prikazuje sve što je bitno za projekt - kako izgleda, gdje ga isprobati, koje su osnovne značajke, kako je napravljen te je li projekt završen ili postoje stvari koje će se u budućnosti dodati.
 
 ## Radite na stvarnim projektima
 
@@ -23,7 +29,9 @@ Praktična primjena vaših developerskih znanja je ogroman plus za traženje nov
 
 ### Open Source Contributions
 
-Postoje brojni *open source* projekti koji daju mogućnost bilo kome da doprinosi njihovom razvoju. Za početak je dovoljno da to budu mali popravci (bugfixes) ili uređivanje/pisanje dokumentacije za neki projekat. Na ovaj način ne samo da radite na stvarnom projektu, nego demonstrirate i dodatan interes te mogućnost kolaboracije sa drugim članovima projekta.
+*Open source*, odnosno pristup otvorenog koda, odnosi se na sav software čiji je izvorni kod javno dostupan svima. Svi zainteresirani ga mogu pregledati, kopirati, pa čak i mijenjati za svoje potrebe. Također je moguće i davati svoj doprinos *open source* projektima koji ga onda mogu uvrstiti u jednu od budućih službenih inačica projekta.
+
+Postoje brojni projekti koji daju mogućnost bilo kome da doprinosi njihovom razvoju. Za početak je dovoljno da to budu mali popravci (bugfixes) ili uređivanje/pisanje dokumentacije za neki projekat. Na ovaj način ne samo da radite na stvarnom projektu, nego demonstrirate i dodatan interes te mogućnost kolaboracije sa drugim članovima projekta.
 
 > [Awesome for Beginners](https://github.com/MunGell/awesome-for-beginners) je popularan GitHub repozitorij koji na jednom mjestu sadrži brojne projekte za ljude koji po prvi puta žele zakoračiti u svijet open source-a.
 
@@ -31,11 +39,19 @@ Postoje brojni *open source* projekti koji daju mogućnost bilo kome da doprinos
 
 Naravno, možete se odvažiti i u izradu nekakvog samostalnog stvarnog projekta. Nije čak toliko ni bitno hoće li krajnji proizvod ikada itko i koristiti. Samim procesom razvoja ovakvog projekta demonstrirate volju za kontinuiranim radom i usavršavanjem.
 
-Razmislite o nekoj aplikaciji ili web stranici koja rješava stvarni problem sa kojim se susrećete. Onda pokušajte osmisliti kako bi to rješenje izgledalo te ga na posljetku pokušajte najbolje što možete pretočiti u kod. To mogu biti aplikacije za praćenje raznih stvari (npr. kućnog budžeta ili stanja skladišta) ili web stranice koje bi mogle koristiti stvarnim poslovima (npr. za frizerski salon ili taxi službu).
+Razmislite o nekoj aplikaciji ili web stranici koja rješava stvarni problem sa kojim se susrećete. Onda pokušajte osmisliti kako bi to rješenje izgledalo te ga na posljetku pokušajte najbolje što možete pretočiti u kod. Evo par primjera takvih aplikacija koje bi mogle biti od stvarne koristi ljudima:
+
+| Problem | Rješenje |
+| ------- | ---------- |
+| Često vam se događa da ostanete bez kuhinjskih namirnica kad vam trebaju | Aplikacija za praćenje stanja "skladišta", odnosno kuhinje, koja vas upozori ako ste pri kraju sa jednom od praćenih namirnica |
+| Naporno vam je svakog dana smišljati što kuhati za ručak   | Aplikacija u koju unosite recepte te ih ona nasumično predlaže za određene dane |
+| Niste sigurni koliko novca mjesečno trošite na gorivo | Aplikacija u koju bilježite kada ste i koliko goriva točili, koja vam na kraju mjeseca generira statističke podatke o potrošnji |
+| Svaki put kad želite ići kod frizera morate potrošiti puno vremena na telefoniranje jer se rijetko kada stigne javljati | Web stranica za frizerski salon sa sistemom za naručivanje termina |
+| Nemate s kim prošetati psa | Web stranica za sve lokalne vlasnike pasa na kojima se mogu dogovoriti za rute i termine šetanja svojih ljubimaca |
 
 ## Upoznajte se sa ljudima iz branše
 
-Srećom, danas je lako stupiti u kontakt sa drugim ljudima koji dijele vaše interese. Suprotno stigmi, većina developera su skroz pristupačni ljudi koji su voljni razgovarati i pružiti pomoć. Podražite ljude po raznim forumima, društvenim mrežama ili eventima. Podijelite svoja iskustva, postavljajte pitanja, razgovarajte o projektima... sve ovo može vam danas-sutra biti prvi korak kojim ćete zakoračiti u developerski svijet.
+Srećom, danas je lako stupiti u kontakt sa drugim ljudima koji dijele vaše interese. Suprotno stigmi, većina developera su skroz pristupačni ljudi koji su voljni razgovarati i pružiti pomoć. Podražite ljude po raznim forumima, društvenim mrežama (Facebook grupe, LinkedIn i Twitter profili) ili eventima. Podijelite svoja iskustva, postavljajte pitanja, razgovarajte o projektima... sve ovo može vam danas-sutra biti prvi korak kojim ćete zakoračiti u developerski svijet.
 
 > Pridružite nam se na sljedećem [Kodiraonica Meetup-u](https://www.meetup.com/kodiraonica/) gdje ćete moći upoznati naše predavače kao i ostale sudionike zainteresirane za web development.
 
@@ -43,6 +59,11 @@ Srećom, danas je lako stupiti u kontakt sa drugim ljudima koji dijele vaše int
 
 Što danas svatko radi kad želi saznati informacije o nekom brendu? Naravno, ode na Google i dođe do službene web stranice. Zamislite sebe kao taj brand, a vaš portfolio kao službenu web stranicu. Bitno je napraviti ju na način koji će najbolje odgovarati na pitanja osobe koja se raspituje o vama. Navedite tehnologije koje poznajete, te projekte koje ste u njima radili. Raspišite se o tome zašto ste baš vi osoba koju netko želi imati u svom timu. Pokažite svoju strast i interes prema web developmentu kroz osobni blog. Mnogo sastojaka ide u savršenu portfolio web stranicu, a na vama je da ih sve zapakirate najljepše što možete.
 
+Naravno, postoje i stvari koje je potrebno izbjegavati prilikom izgradnje portfolio stranice: 
+- Loša gramatika i pravopis
+- Ubacivanje nepovezanih ili zastarjelih radova
+- Neprofesionalne fotografije
+- Natrpavanje previše osobnih informacija gdje im nije mjesto
+
 > Na [našem front-end tečaju](https://blog.kodiraonica.dev/projects/portfolio/) jedan od projekata je izrada portfolio web stranice. Evo [jedan primjer](https://pumped-zoo.surge.sh/) kako takva stranica može izgledati.
 
-## 
