--- a/1.md
+++ b/1.md
@@ -67,3 +67,9 @@ Naravno, postoje i stvari koje je potrebno izbjegavati prilikom izgradnje portfo
 
 > Na [našem front-end tečaju](https://blog.kodiraonica.dev/projects/portfolio/) jedan od projekata je izrada portfolio web stranice. Evo [jedan primjer](https://pumped-zoo.surge.sh/) kako takva stranica može izgledati.
 
+
+## Zaključak
+
+Iako pronalazak posla u svijetu web developmenta nije jednostavan zadatak, praćenjem ovih savjeta značajno će te si povećati mogućnosti da poslodavac odabare baš vas. Kombinacija ovih koraka pomoći će vam da se izdvojite iz mase i povećate šanse za pronalazak prvog web developerskog posla. A osim toga ćete mnogo toga i naučiti kroz sam proces, tako da vrijeme i trud zasigurno neće biti uzaludno utrošeni. 
+
+Nadam se da vam je članak bio od koristi te da će vam pomoći u traženju posla. Iako je glavna djelatnost autora ovog članka [izrada web stranica](https://tiamedia.hr/o-nama), uvijek je otvoren za upoznavanje novih ljudi iz svijeta web developmenta. Tako da se slobodno javite ili komentirajte članak.
